force-app/main/default/objects/Timecard__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, hours in this timecard are billable</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>