force-app/main/default/objects/Timecard__c/fields/Friday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Friday_Hours__c</fullName>
    <description>Hours worked on friday</description>
    <label>Friday Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>