force-app/main/default/objects/Timecard__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Invoice number associated with this timecard</description>
    <label>Invoice Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>