force-app/main/default/objects/Timecard__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Invoice</description>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>