force-app/main/default/objects/Timecard__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any comments on the timecard, entered by the consultant</description>
    <label>Notes</label>
    <length>150</length>
    <type>Text</type>
</CustomField>