force-app/main/default/objects/Timecard__c/fields/Saturday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Hours__c</fullName>
    <description>Hours worked on saturday</description>
    <label>Saturday Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>