force-app/main/default/objects/Timecard__c/fields/Sunday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Hours__c</fullName>
    <description>Hours worked on sunday</description>
    <label>Sunday Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>