force-app/main/default/objects/Timecard__c/fields/Week_Ending__c.field-meta.xml
<CustomField>
    <fullName>Week_Ending__c</fullName>
    <description>Last day in the week recorded by this Timecard(a saturday)</description>
    <label>Week Ending</label>
    <type>Date</type>
</CustomField>